Add probability space constructing

--- a/ScienceWork/MatModel.tex
+++ b/ScienceWork/MatModel.tex
@@ -56,16 +56,17 @@ f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z ^{\nu}
 Пусть ${}^1\G=\G^{\mathrm{\Rmnum{1}}} \cup \G^{\mathrm{\Rmnum{3}}}$, 
 ${}^2\G=\G^{\mathrm{\Rmnum{1}}} \cup \G^{\mathrm{\Rmnum{2}}}$,
 ${}^3\G=\G^{\mathrm{\Rmnum{3}}} \cup \G^{\mathrm{\Rmnum{4}}}$.
-Смена состояний обслуживающего устройства осуществляется по следующему правилу. Множество состояний $C_k = \{\G^{(k,r)} \colon r=1,2,\ldots n_k\}$ будем называть $k$-м циклом, $k=1$, $2$, $\ldots$, $d$ (Рис. \ref{GraphScheme}). При $k=0$ состояние вида $\ga{0,r}$ будем называть состоянием продления, $r=0$, $1$, $\ldots$, $n_0$. Положим $r \oplus_k 1 = r+1$ для $r<n_k$ и $r \oplus_k 1 = 1$ при $r=n_k$, $k = 0$, $1$, $\ldots$, $d$. В цикле $C_k$ выделим подмножества $C_k^{\mathrm{O}}$ выходных, $C_k^{\mathrm{I}}$ входных и $C_k^{\mathrm{N}} = C_k \setminus (C_k^{\mathrm{O}} \cup C_k^{\mathrm{I}})$ нейтральных состояний. Тогда после состояния $\ga{k,r} \not\in C_k^{\mathrm{O}}$ обслуживающее устройство переходит в состояние $\ga{k,r \oplus_k 1}$ того же цикла $C_k$. При $\ga{k,r}$ принадлежащем множеству $C_k^{\mathrm{O}}$ прибор переходит в состояние $\ga{k,r\oplus_k 1}$, если число требований в очереди $O_3$ в момент переключения больше заданного порога $L$. В противном случае, то есть если число требований в очереди $O_3$ меньше либо равно $L$, то новое состояние прибора будет состоянием продления $\ga{0,r_1}$, где $r_1=h_1(\ga{k,r})$ и $h_1(\cdot)$~--- заданное отображение множества $\bigcup\limits_{k=1}^d C_k^{\mathrm{O}}$ во множество $\{1,2,\ldots, n_0\}$. После состояния $\ga{0,r}$ выбирается состояние того же вида $\ga{0,r_2}$, если число требований в очереди $O_3$ меньше $L$, где $r_2=h_2(r)$ и $h_2(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на себя; в противном случае включается состояние $\ga{k,r_3} \in C_k^{\mathrm{I}}$, где $\ga{k,r_3}=h_3(r)$ и $h_3(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на множество  $\bigcup\limits_{k=1}^d C_k^{\mathrm{I}}$. Считается, что все состояния продления $\ga{0,r} \in {}^2 \G$, все множества $C_k^\mathrm{O}\subset {}^2 \G$ и $C_k^\mathrm{I}\subset {}^3 \G$.
+
+Смена состояний обслуживающего устройства осуществляется по следующему правилу. Множество состояний $C_k = \{\G^{(k,r)} \colon r=1,2,\ldots n_k\}$ будем называть $k$-м циклом, $k=1$, $2$, $\ldots$, $d$ (Рис. \ref{GraphScheme}). При $k=0$ состояние вида $\ga{0,r}$ будем называть состоянием продления, $r=0$, $1$, $\ldots$, $n_0$. Положим $r \oplus_k 1 = r+1$ для $r<n_k$ и $r \oplus_k 1 = 1$ при $r=n_k$, $k = 0$, $1$, $\ldots$, $d$. В цикле $C_k$ выделим подмножества $C_k^{\mathrm{O}}$ выходных, $C_k^{\mathrm{I}}$ входных и $C_k^{\mathrm{N}} = C_k \setminus (C_k^{\mathrm{O}} \cup C_k^{\mathrm{I}})$ нейтральных состояний. Тогда после состояния $\ga{k,r} \not\in C_k^{\mathrm{O}}$ обслуживающее устройство переходит в состояние $\ga{k,r \oplus_k 1}$ того же цикла $C_k$. При $\ga{k,r}$ принадлежащем множеству $C_k^{\mathrm{O}}$ прибор переходит в состояние $\ga{k,r\oplus_k 1}$, если число требований в очереди $O_3$ в момент переключения больше заданного порога $L$. В противном случае, то есть если число требований в очереди $O_3$ меньше либо равно $L$, то новое состояние прибора будет состоянием продления $\ga{0,r_1}$, где $r_1=h_1(\ga{k,r})$ и $h_1(\cdot)$~--- заданное отображение множества $\bigcup\limits_{k=1}^d C_k^{\mathrm{O}}$ во множество $\{1,2,\ldots, n_0\}$. После состояния $\ga{0,r}$ выбирается состояние того же вида $\ga{0,r_2}$, если число требований в очереди $O_3$ меньше $L$, где $r_2=h_2(r)$ и $h_2(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на себя; в противном случае включается входное состояние $\ga{k,r_3} \in C_k^{\mathrm{I}}$, где $\ga{k,r_3}=h_3(r)$ и $h_3(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на множество  $\bigcup\limits_{k=1}^d C_k^{\mathrm{I}}$. Считается, что все состояния продления $\ga{0,r} \in {}^2 \G$, все множества $C_k^\mathrm{O}\subset {}^2 \G$ и $C_k^\mathrm{I}\subset {}^3 \G$.
 
 \begin{figure}[hb]\centering
 \includegraphics[scale=0.5]{GraphScheme3.png} 
-\caption{Класс графов переходов. Незакрашенные вершины~--- выходные вершины, красным отмечены входные вершины, черным --- нейтральные, наполовину закрашенным черным вершинам соответствуют состояния продления}
+\caption{Класс графов переходов. Незакрашенные вершины~--- выходные вершины, красным отмечены входные вершины, черным --- нейтральные, наполовину закрашенным вершинам соответствуют состояния продления}
 \label{GraphScheme}
 \end{figure}
 %\subsection{Допустимые графы переходов состояний ОУ}
 
-
+Рассмотрим введеные обозначения на примере Рис.~\ref{GraphScheme}. Примерами входных состояний являются $\ga{1,1} \in C_1^{\mathrm{I}}$ и $\ga{2,3} \in C_2^{\mathrm{I}}$, выходных состояний~--- $\ga{1,4} \in C_1^{\mathrm{O}}$ и $\ga{2,1} \in C_2^{\mathrm{O}}$, нейтральных состояний~--- $\ga{1,2}, \ga{1,3}, \ga{1,n_1} \in C_1^{\mathrm{N}}$ и $\ga{2,2} \in C_2^{\mathrm{N}}$. Состояния продления представлены на графе вершинами $\ga{0,1}$, $\ga{0,2}$, $\ga{0,3}$ и $\ga{0,4}$. Далее, отображение $h_1(\cdot)$ на графе задано таким образом, что оно переводит, например, выходное состояние $\ga{1,4}$ в число $1$~--- номер состояния продления $\ga{0,1}$, то есть $h_1(\ga{1,4})=1$. Аналогично $h_2(1)=2$, $h_2(2)=4$ и $h_2(3)=1$. Примером отображения $h_3(\cdot)$ является $h_3(2)=\ga{2,3}$.
 
 Предполагается, что длительности обслуживания различных требований могут быть зависимыми и иметь различные законы распределения, поэтому вместо классического способа, состоящего в указании функции распределения длительности обслуживания произвольного требования, будут использованы потоки насыщения. Потоки насыщения $\Pi^{\mathrm{\text{нас}}}_j$, $j \in \brrr{1,2,3,4}$, определяются как виртуальные выходные потоки при 
 условии максимального использования ресурсов обслуживающего устройства, а для $j\in \brrr{1, 2, 3}$ еще и при условии максимальной загрузки соответствующих очередей. 
@@ -93,17 +94,111 @@ ${}^3\G=\G^{\mathrm{\Rmnum{3}}} \cup \G^{\mathrm{\Rmnum{4}}}$.
 В завершение построения примера отметим, что при прохождении перекрестков машины предполагаются движущимися только в прямом направлении, то есть перемешивания конфликтных потоков не допускается. Таким образом, поток $\Pi'$ не представляет интереса для дальнейшего исследования системы и может быть отброшен и, следовательно, построенный пример целиком удовлетворяет структурной схеме на рис. \ref{SystemScheme}.
  
 \subsection{Представление рассматриваемой системы обслуживания в виде кибернетической управляющей системы}
-Описанная на содержательном уровне в предыдущем разделе система массового обслуживания должна рассматриваться как кибернетическая управляющая система обслуживания (ссылка на федоткина, Зорина А.В. киевский сборник твмс). Схема управляющей системы приведена на рис. \ref{SystemScheme}. На схеме присутствуют следующие блоки: 1) внешняя среда с одним состоянием; 2) входные полюса первого типа~--- входные потоки $\Pi_1$, $\Pi_2$, $\Pi_3$, $\Pi_4$; 3) входные полюса второго типа~--- потоки насыщения $\Pi_1^{\mathrm{нас}}$, $\Pi_2^{\mathrm{нас}}$, $\Pi_3^{\mathrm{нас}}$, $\Pi_4^{\mathrm{нас}}$; 4) внешняя память~--- очереди $O_1$, $O_2$, $O_3$, $O_4$; 5) устройство по переработки информации внешней памяти~--- устройство по поддержанию дисциплины очереди $\delta_1$, $\delta_2$, $\delta_3$, $\delta_4$; 6) внутренняя память обслуживающего устройства~--- обслуживающее устройство (ОУ); 7) устройство по переработке информации во внутренней памяти~--- граф смены состояний; 8) выходные полюса $\Pi_1^{\mathrm{вых}}$, $\Pi_2^{\mathrm{вых}}$, $\Pi_3^{\mathrm{вых}}$, $\Pi_4^{\mathrm{вых}}$. Координатой блока является номер этого блока на схеме. Для задания информации блоков введем следующие величины и укажем множество возможных состояний.
+Описанная на содержательном уровне в предыдущем разделе система массового обслуживания должна рассматриваться как кибернетическая управляющая система обслуживания (ссылка на федоткина, Зорина А.В. киевский сборник твмс). Схема управляющей системы приведена на рис. \ref{SystemScheme}. На схеме присутствуют следующие блоки: 1) внешняя среда с одним состоянием; 2) входные полюса первого типа~--- входные потоки $\Pi_1$, $\Pi_2$, $\Pi_3$, $\Pi_4$; 3) входные полюса второго типа~--- потоки насыщения $\Pi_1^{\mathrm{\text{нас}}}$, $\Pi_2^{\mathrm{\text{нас}}}$, $\Pi_3^{\mathrm{\text{нас}}}$, $\Pi_4^{\mathrm{\text{нас}}}$; 4) внешняя память~--- очереди $O_1$, $O_2$, $O_3$, $O_4$; 5) устройство по переработки информации внешней памяти~--- устройства по поддержанию дисциплины очереди $\delta_1$, $\delta_2$, $\delta_3$, $\delta_4$; 6) внутренняя память обслуживающего устройства~--- обслуживающее устройство (ОУ); 7) устройство по переработке информации во внутренней памяти~--- граф смены состояний; 8) выходные полюса $\Pi_1^{\mathrm{\text{вых}}}$, $\Pi_2^{\mathrm{\text{вых}}}$, $\Pi_3^{\mathrm{\text{вых}}}$, $\Pi_4^{\mathrm{\text{вых}}}$. Координатой блока является номер этого блока на схеме. Для задания информации блоков введем следующие величины и укажем множество возможных состояний.
 
-В качестве дискретной временной шкалы выберем последовательность $\tau_0=0$, $\tau_1$, $\tau_2$, $\ldots$ моментов смены состояний обслуживающего устройства. Обозначим $\G_i$ из множества $\G$ состояние обслуживающего устройства в течение времени $\left(\tau_{i-1};\tau_i\right]$, количество $\vk_{j,i} \in Z_+ $ требований в очереди $O_j$ в момент времени $\tau_i$, количество $\eta_{j,i} \in Z_+$ требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\xi_{j,i} \in Z_+$ требований по потоку насыщения $\Pi^{\mathrm{sat}}_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\overline{\xi}_{j,i}\in Z_+$ реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$.
+В качестве дискретной временной шкалы выберем последовательность $\tau_0=0$, $\tau_1$, $\tau_2$, $\ldots$ моментов смены состояний обслуживающего устройства. Обозначим $\G_i$ из множества $\G$ состояние обслуживающего устройства в течение времени $\left(\tau_{i-1};\tau_i\right]$, количество $\vk_{j,i} \in Z_+ $ требований в очереди $O_j$ в момент времени $\tau_i$, количество $\eta_{j,i} \in Z_+$ требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\xi_{j,i} \in Z_+$ требований по потоку насыщения $\Pi^{\mathrm{\text{нас}}}_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\overline{\xi}_{j,i}\in Z_+$ реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$.
 
-Нелокальное описание входных полюсов первого и второго типа состоит в указании некоторых свойств условных распределений выделеной дискретной компоненты
+Закон изменения состояния обслуживающего устройства будем предполагать заданным соотношением 
+\begin{equation}
+\G_{i+1}=h(\G_i,\vk_{3,i}).
+\end{equation}
+Для определения длительности $T_{i}$ состояния обслуживающего устройства в течение времени $\left(\tau_{i-1};\tau_i\right]$, удобно ввести функцию $h_T(\cdot,\cdot)$:
+\begin{equation}
+T_{i+1}=h_T(\G_i,\vk_{3,i})= \Tt{r'},\quad  \text{ где } \ga{r'}=h(\G_i,\vk_{3,i}).
+\label{timeLaw}
+\end{equation}
+Функциональная зависимость
+\begin{equation}
+\overline{\xi}_{j,i}=\min\brrr{\vk_{j,i}+\eta_{j,i},\xi_{j,i}}
+\label{saturationEq}
+\end{equation}
+между величиной $\overline{\xi}_{j,i}$ и величинами $\vk_{j,i}$, $\eta_{j,i}$, $\xi_{j,i}$ реализует стратегию механизма обслуживания требований, $j=1$,$2$,$3$. Далее, поскольку $\vk_{j,i+1}=\vk_{j,i}+\eta_{j,i}-\overline{\xi}_{j,i}$ для $j=1$,$2$,$3$,$4$, то из \eqref{saturationEq} следует соотношение
+\begin{equation}
+\vk_{j,i+1}=\max\brrr{{0,\vk_{j,i}+\eta_{j,i}-\xi_{j,i}}}.
+\end{equation}
+Из смысла поставленной задачи (см. также структурную схему \eqref{SystemScheme}) следуют соотношения для потока $\Pi_4$
+\begin{equation}
+\overline{\xi}_{4,i} = \eta_{2,i} \quad \eta_{4,i} = \overline{\xi}_{1,i}, \quad \vk_{4,i+1}=\vk_{4,i}+\eta_{4,i}-\overline{\xi}_{4,i}
+\end{equation}
+
+Нелокальное описание входных потоков и потоков насыщения состоит в указании некоторых свойств условных распределений выделенных дискретных компонент $\eta_i=(\eta_{1,i},\eta_{2,i}, \eta_{3,i}, \eta_{4,i})$ и $\xi_i=(\xi_{1,i}, \xi_{2,i}, \xi_{3,i}, \xi_{4,i})$ маркированных точечных процессов $\brrr{(\tau_i, \nu_i, \eta_i); i\geqslant 0}$ и $\brrr{(\tau_i, \nu_i, \xi_i); i\geqslant 0}$ при фиксированных значениях метки $\nu_i = \br{\Gamma_i,\vk_i}$, где $\vk_i=(\vk_{1,i}, \vk_{2,i}, \vk_{3,i}, \vk_{4,i})$.
 %
 %\item количество $\vk_{j,i} \in Z_+ $ требований в очереди $O_j$ в момент времени $\tau_i$;
 %\item состояние обслуживающего устройства $\G_i\in \G = \brrr{\G^{(1)},\G^{(2)}, \ldots, \G^{(n)}}$ в течение времени $\left(\tau_{i-1};\tau_i\right]$;
 %\item количество $\eta_{j,i}$ требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$;
 %\item количество $\xi_{j,i}$ требований по потоку насыщения $\Pi^{\mathrm{sat}}_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$;
 %\item количество $\overline{\xi}_{j,i}$ реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$.
+
+Построим теперь 	вероятностное пространство $\br{\Omega, {\cal F}, P(\cdot)}$, для которого можно будет рассматривать введеные величины как случайные величины на этом пространстве. В соответствии с теоремой Ионеску Тулчи для этого достаточно задать вероятностное пространство $\br{\Omega_0, {\cal F}_0, P_0(\cdot)}$ и далее, считая для $0 \leqslant i < n$ и каждого набора элементарных исходов $(\omega_0, \omega_1, \ldots, \omega_{i-1})$ заданными пространства $\br{\Omega_i, {\cal F}_i, P_i(\omega_0,\omega_1,\ldots, \omega_{i-1},\cdot)}$, задать пространство $\br{\Omega_n, {\cal F}_n, P_n(\omega_0,\omega_1,\ldots, \omega_{n-1},\cdot)}$, причем для любого множества $B\in {\cal F}_i$ функции $P_i(\omega_0,\omega_1,\ldots, \omega_{i-1},B)$
+должны быть измеримыми функциями от $(\omega_0, \omega_1, \ldots, \omega_{i-1})$. Тогда для $\Omega=\prod\limits_{i=0}^{\infty}\Omega_i$ и ${\cal F}=\prod\limits_{i=0}^{\infty} {\cal F}_i$ будет существовать единственная вероятностная мера $P(\cdot)$ такая, что $\forall i \geqslant 0$
+\begin{equation}
+P\brrr{\omega \colon \omega_0 \in A_0, \omega_1 \in A_1, \ldots, \omega_i\in A_i} = P_i\br{A_0 \times A_1 \times \ldots \times A_i},
+\end{equation}
+где 
+\begin{equation}
+ P_i\br{A_0 \times A_1 \times \ldots \times A_i} = \int_{A_0} P_0(d \omega_0) \int_{A_1} P(\omega_0,d \omega_1) \ldots \int_{A_i} P(\omega_0, \omega_1, \ldots, \omega_{i-1}, d \omega_i)
+\end{equation}
+и $A_k \in {\cal F}_k$, $k \geqslant 0$. Более того, наряду с вероятностной мерой $P(\cdot)$ на $(\Omega, {\cal F})$ также будет существовать случайная последовательность $X=\br{X_0(\omega), X_1(\omega), \ldots}$ такая, что
+\begin{equation}
+P\brrr{\omega \colon X_0(\omega) \in A_0, X_1(\omega)\in A_1, \ldots, X_i(\omega)\in A_i} = P_i\br{A_0\times A_1 \times \ldots, \times A_i},
+\end{equation}
+где $A_i\in {\cal F}_i$.
+
+Итак, за описание элементарного исхода $\omega_i \in \Omega_i$ для произвольного $i \geqslant 0$ примем набор $\omega_i=(\eta_{1,i},\eta_{2,i}, \eta_{3,i})$. Таким образом, $\Omega_i=Z_+^3$, в качестве $\sigma$~--алгебр ${\cal F}_i$ возьмем множество всех подмножеств $\Omega_i$. Для задания вероятностных мер и случайных величин, упомянутых выше, введем следующие функции:
+% и остается лишь задать вероятностные меры $P_0(\cdot)$ и $P_i(\omega_0,\omega_1,\ldots, \omega_{i-1},\cdot)$ для $i > 0$.
+\begin{align}
+f_{\xi_j | \G,\vk_3} (\gamma,x_3) &= \ell_{r,j},\text{ где }  h(\gamma,x)=\ga{r}\in {}^j\G \text{ и } j\in\brrr{1,2,3}\\
+f_{\eta_4| \xi_1, \eta_1, \vk_1} (a,b,x) &= \begin{cases} a,\quad &\text{если }x+b\geq a \\  x+b,\quad &\text{если }x+b<a \end{cases},\\
+P_{\eta_2|\G,\vk_3,\vk_4} (a,\gamma,x_3,x_4) &= \begin{cases} \binom{x_4}{a} p_r^a(1-p_r)^{x-a}, \quad &\text{если } h(\gamma,x_4)=\ga{r}, 0 \leqslant a \leqslant x_4 \\ 0, \quad &\text{иначе},\end{cases}, \\
+P_{\eta_1|\G,\vk_3}(a,\gamma,x) &= \vp_1(a,h_T(\gamma,x)),\\
+P_{\eta_3|\G,\vk_3}(a,\gamma,x) &= \vp_3(a,h_T(\gamma,x)),
+\end{align}
+где $a,b \in Z_+$, $\gamma \in \G$ и функции $\vp_1(\cdot,\cdot)$, $\vp_3(\cdot,\cdot)$ находятся из соотношений
+\begin{equation}
+\sum_{x=0}^{\infty} z^x\vp_j(x,t) = \exp\brrr{\la_j t \br{\sum_{b=1}^{\infty} z^b p_b^{(j)} -1}}, j \in \brrr{1,3}.
+\end{equation}
+
+Далее, зафиксируем $\gamma_0\in G$ и $(x_{1,0},x_{2,0},x_{3,0},x_{4,0})\in Z_+^4$, тогда  $P_0(\cdot)$ определим следующим образом:
+\ml
+{
+P_0(a_1,a_2,a_3) = P_0\brrr{\omega_0=(\eta_{1,0},\eta_{2,0}, \eta_{3,0}) \colon \eta_{1,0}=a_1, \eta_{2,0}=a_2, \eta_{3,0}=a_3} = \\ 
+=P_{\eta_1|\G,\vk_3}(a_1,\gamma_0,x_{3,0})\times P_{\eta_2|\G,\vk_3,\vk_4} (a_2,\gamma_0,x_{3,0},x_{4,0}) \times P_{\eta_3|\G,\vk_3}(a_3, \gamma_0, x_{3,0}).
+}
+На построенном вероятностном пространстве $\br{\Omega_0,{\cal F}_0,P_0(\cdot)}$ определим случайные величины
+\begin{align}
+\G_0&=\gamma_0=\mathrm{const},\\
+\vk_{j,0}&=x_{j,0}=\mathrm{const},\\
+\xi_{j,0}(\omega_0)&=f_{\xi_j | \G,\vk_3} (\gamma_0,x_{3,0})=\mathrm{const},\\
+\eta_{j,0}(\omega_0)&=\eta_{j,0}(\eta_{1,0},\eta_{2,0},\eta_{3,0})=\eta_{j,0}, \\
+\eta_{4,0}(\omega_0)&=f_{\eta_4| \xi_1, \eta_1, \vk_1} (\xi_{1,0}(\omega_0),\eta_{1,0}(\omega_0),x_{1,0}),\\
+\overline{\xi}_{4,0}(\omega_0)&=\eta_{2,0}(\omega_0).
+\end{align}
+где $j\in \brrr{1,2,3}$.
+Теперь, предполагая заданными вероятностные пространства $\br{\Omega_i, {\cal F}_i,P_i(\omega_0, \omega_1, \ldots, \omega_{i-1},\cdot)}$,$i\in \brrr{0,1,\ldots,n}$, случайные величины 
+\begin{align}
+\G_{i+1}(\omega_0,\omega_1,\ldots,\omega_{i+1})&=h\br{\G_{i}(\omega_0,\omega_1,\ldots,\omega_{i}),\vk_{3,i}(\omega_0,\omega_1,\ldots,\omega_{i})}=\mathrm{const},\\
+\vk_{j,i+1}(\omega_0,\omega_1,\ldots,\omega_{i+1})&=\max\brrr{{0,\vk_{j,i}(\ldots)+\eta_{j,i}(\ldots)-\xi_{j,i}(\ldots)}}=\mathrm{const},\\
+\vk_{4,i+1}(\omega_0,\omega_1,\ldots,\omega_{i+1})&=\vk_{4,i}(\ldots)+\eta_{4,i}(\ldots)-\overline{\xi}_{4,i}(\ldots),
+\end{align}
+на пространствах  $\br{\Omega_{i+1}, {\cal F}_{i+1},P_{i+1}(\omega_0, \omega_1, \ldots, \omega_{i},\cdot)}$, $i\in \brrr{0,1,\ldots,n-1}$, $j\in \brrr{1,2,3}$, и случайные величины 
+\begin{align}
+\xi_{j,i}(\omega_0,\omega_1,\ldots,\omega_i)&=f_{\xi_j | \G,\vk_3} (\G_i(\omega_0,\omega_1,\ldots,\omega_i),x_{3,i}(\omega_0,\omega_1,\ldots,\omega_i)),\\
+\eta_{j,i}(\omega_0,\omega_1,\ldots,\omega_i)&=\eta_{j,i}(\omega_i)=\eta_{j,i}(\eta_{1,i},\eta_{2,i},\eta_{3,i})=\eta_{j,i}, \\
+\eta_{4,i}(\omega_0,\omega_1,\ldots,\omega_i)&=f_{\eta_4| \xi_1, \eta_1, \vk_1} (\xi_{1,i}(\omega_0,\omega_1,\ldots,\omega_i),\eta_{1,i}(\omega_i),\vk_{1,i}(\omega_0,\omega_1,\ldots,\omega_i)),\\
+\overline{\xi}_{4,0}(\omega_0,\omega_1,\ldots,\omega_i)&=\eta_{2,0}(\omega_i).
+\end{align}
+на пространствах  $\br{\Omega_{i}, {\cal F}_{i},P_{i}(\omega_0, \omega_1, \ldots, \omega_{i-1},\cdot)}$, $i\in \brrr{0,1,\ldots,n}$, $j\in \brrr{1,2,3}$, построим меру $P_{n+1}(\omega_0, \omega_1, \ldots, \omega_{n},\cdot)$:
+\ml
+{
+P_{n+1}(\omega_0,\omega_1,\ldots,\omega_n,\brrr{\omega_{n+1} = (\eta_{1,n+1},\eta_{2,n+1},\eta_{3,n+1})\colon \eta_{1,n+1}=a_1, \eta_{2,n+1}=a_2, \eta_{3,n+1}=a_3}) = \\
+=P_{\eta_1|\G,\vk_3}(a_1,\G_{n+1}(\omega_0,\omega_1,\ldots,\omega_i),\vk_{3,n+1}(\omega_0,\omega_1,\ldots,\omega_{i}))\times\\
+\times P_{\eta_2|\G,\vk_3,\vk_4} (a_2,\G_{n+1}(\omega_0,\omega_1,\ldots,\omega_n),\vk_{4,n+1}(\omega_0,\omega_1,\ldots,\omega_{n})) \times\\
+\times P_{\eta_3|\G,\vk_3}(a_3,\G_{n+1}(\omega_0,\omega_1,\ldots,\omega_i),\vk_{3,n+1}(\omega_0,\omega_1,\ldots,\omega_{i}))
+}
+%\ml
+%{
+%
+%}
 \subsection{Свойства условных распределений}
 
 Все рассматриваемые в этой работе случайные элементы определяются на общем вероятностном пространстве $\br{\Omega, {\cal F}, P}$ элементарных исходов $\omega \in \Omega$ с вероятностной мерой $P(A)$, $A \in {\cal F}$, на $\sigma$-алгебре ${\cal F}$. 
@@ -148,6 +243,7 @@ T_{i+1}=h_T(\G_i,\vk_{3,i})= \Tt{r'},\quad  \text{ где } \ga{r'}=h(\G_i,\vk_{
 \P{\xi_{j,i} = \ell_{r',j}}{\G_i=\ga{k,r}, \vk_{3,i} = x} = 1, &\quad \G_{i+1}=\ga{r'}\in~^j\G,
 \end{align}
 где $j\in \{1, 2, 3\}$, $x \in Z_+$.
+
 
 Введем для $0 < u \leqslant 1$ и $0 \leqslant k \leqslant x$ величину
 \begin{equation}
