--- a/ScienceWork/MatModel.tex
+++ b/ScienceWork/MatModel.tex
@@ -11,7 +11,7 @@
 \renewcommand{\P}[2]{P\br{\left. #1 \right| #2}}
 \newcommand{\iakt}{[\tau_{i},\tau_{i+1})}
 \newcommand{\Gr}[1]{\Gamma^{(#1)}}
-\newcommand{\Mark}[0]{\brrr{\br{\G_i, \vk_{1,i}, \vk_{2,i}, \vk_{3,i}, \vk_{4,i}}, i \geqslant 0}}
+\newcommand{\Mark}{\{(\G_i, \vk_{1,i}, \vk_{2,i}, \vk_{3,i}, \vk_{4,i}); i \geqslant 0\}}
 %\newcommand{\Markk}[0]{\brrr{ \vk_i, i \geqslant 0}}
 %\newcommand{\Markkhat}[0]{\brrr{ \hat{\vk}_i, i \geqslant 1}}
 %\newcommand{\Markkhata}[0]{\brrr{ \hat{\vk}_i\br{a}, i \geqslant 1}}
@@ -29,6 +29,11 @@
 \newcommand{\T}[2]{T^{\left( #1 , #2 \right)} }
 \newcommand{\ga}[1]{\Gamma^{\left( #1 \right)} }
 \newcommand{\Tt}[1]{T^{\left( #1 \right)} }
+%\newcommand*{\hm}[1]{#1\nobreak\discretionary{}%
+%{\hbox{$\mathsurround=0pt #1$}}{}}
+\renewcommand{\Pr}{{\mathbf P}}
+
+
 \begin{document}
 
 \section{Постановка задачи и построение математической модели}
@@ -47,7 +52,7 @@
 f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z ^{\nu}
 \label{GeneratingFunc}
 \end{equation}
-которая предполагается аналитической при $\forall z \colon |z|<(1+\varepsilon), \varepsilon > 0$ и $p_{\nu}^{(j)}>0$. Величина $p_{\nu}^{(j)}$ определяет вероятность того, что по потоку $\Pi_j$ число требований в группе равно $\nu$, $j\in \brrr{1,3}$. Обслуженные требования потока $\Pi_1$ поступают на повторное обслуживание, формируя при этом поток $\Pi_4$. Потоки $\Pi_2$ и $\Pi_3$ являются конфликтными, что означает запрет на одновременное обслуживание требований этих потоков и, следовательно, исследование системы не может быть сведено к задаче с меньшим числом потоков. 
+которая предполагается аналитической при любом $z$ таком, что $|z|<(1+\varepsilon), \varepsilon > 0$. Величина $p_{\nu}^{(j)}$ определяет вероятность того, что по потоку $\Pi_j$ число требований в группе равно $\nu$, $j\in \brrr{1,3}$. Обслуженные требования потока $\Pi_1$ поступают на повторное обслуживание, формируя при этом поток $\Pi_4$. Потоки $\Pi_2$ и $\Pi_3$ являются конфликтными, что означает запрет на одновременное обслуживание требований этих потоков и, следовательно, исследование системы не может быть сведено к задаче с меньшим числом потоков. 
  
  В каждый момент времени обслуживающее устройство находится в одном из конечного множества состояний $\Gamma=\{\G^{(k,r)} \colon k=0,1,\ldots,d; r=1,2,\ldots n_k\}$ с заданными натуральными числами $d$, $n_0$, $n_1$, $\ldots$, $n_d$. В каждом состоянии $\ga{k,r}$ обслуживающее устройство находится в течение времени $\Tt{k,r}$. Введем множества $\G^{\mathrm{I}}$, $\G^{\mathrm{II}}$, $\G^{\mathrm{III}}$ и $\G^{\mathrm{IV}}$ следующим образом. В состоянии $\gamma \in \G^{\mathrm{\Rmnum{1}}}$ обслуживаются только требования из очередей $O_1$, $O_2$ и $O_4$.
 В состоянии $\gamma \in \G^{\mathrm{\Rmnum{2}}}$ обслуживаются только требования из очередей $O_2$ и $O_4$.
@@ -55,7 +60,7 @@ f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z ^{\nu}
 В состоянии $\gamma \in \G^{\mathrm{\Rmnum{4}}}$ обслуживаются только требования из очередей $O_3$ и $O_4$.
 Тогда множество $\G$ есть объединение $\G = \G^{\mathrm{I}} \cup \G^{\mathrm{II}} \cup \G^{\mathrm{III}} \cup \G^{\mathrm{III}}$ непересекающихся подмножеств. 
 
-Смена состояний обслуживающего устройства осуществляется по следующему правилу. Множество состояний $C_k = \{\G^{(k,r)} \colon r=1,2,\ldots n_k\}$ будем называть $k$-м циклом, $k=1$, $2$, $\ldots$, $d$ (Рис. \ref{GraphScheme}). При $k=0$ состояние вида $\ga{0,r}$ будем называть состоянием продления, $r=0$, $1$, $\ldots$, $n_0$. Положим $r \oplus_k 1 = r+1$ для $r<n_k$ и $r \oplus_k 1 = 1$ при $r=n_k$, $k = 0$, $1$, $\ldots$, $d$. В цикле $C_k$ выделим подмножества $C_k^{\mathrm{O}}$ выходных, $C_k^{\mathrm{I}}$ входных и $C_k^{\mathrm{N}} = C_k \setminus (C_k^{\mathrm{O}} \cup C_k^{\mathrm{I}})$ нейтральных состояний. Тогда после состояния $\ga{k,r} \in C_k\setminus C_k^{\mathrm{O}}$ обслуживающее устройство переходит в состояние $\ga{k,r \oplus_k 1}$ того же цикла $C_k$. При $\ga{k,r}$ принадлежащем множеству $C_k^{\mathrm{O}}$ прибор переходит в состояние $\ga{k,r\oplus_k 1}$, если число требований в очереди $O_3$ в момент переключения больше заданного порога $L$. В противном случае, то есть если число требований в очереди $O_3$ меньше либо равно $L$, то новое состояние прибора будет состоянием продления $\ga{0,r_1}$, где $r_1=h_1(\ga{k,r})$ и $h_1(\cdot)$~--- заданное отображение множества $\bigcup\limits_{k=1}^d C_k^{\mathrm{O}}$ во множество $\{1,2,\ldots, n_0\}$. После состояния $\ga{0,r}$ выбирается состояние того же вида $\ga{0,r_2}$, если число требований в очереди $O_3$ меньше $L$, где $r_2=h_2(r)$ и $h_2(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на себя; в противном случае включается входное состояние $\ga{k,r_3} \in C_k^{\mathrm{I}}$, где $\ga{k,r_3}=h_3(r)$ и $h_3(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на множество  $\bigcup\limits_{k=1}^d C_k^{\mathrm{I}}$. Считается, что все состояния продления $\ga{0,r} \in {}^2 \G$, все множества $C_k^\mathrm{O}\subset {}^2 \G$ и $C_k^\mathrm{I}\subset {}^3 \G$.
+Смена состояний обслуживающего устройства осуществляется по следующему правилу. Множество состояний $C_k = \{\G^{(k,r)} \colon r=1,2,\ldots n_k\}$ будем называть $k$-м циклом, $k=1$, $2$, $\ldots$, $d$ (Рис. \ref{GraphScheme}). При $k=0$ состояние вида $\ga{0,r}$ будем называть состоянием продления, $r=0$, $1$, $\ldots$, $n_0$. Положим $r \oplus_k 1 = r+1$ для $r<n_k$ и $r \oplus_k 1 = 1$ при $r=n_k$, $k = 0$, $1$, $\ldots$, $d$. В цикле $C_k$ выделим подмножества $C_k^{\mathrm{O}}$ выходных, $C_k^{\mathrm{I}}$ входных и $C_k^{\mathrm{N}} = C_k \setminus (C_k^{\mathrm{O}} \cup C_k^{\mathrm{I}})$ нейтральных состояний. Тогда после состояния $\ga{k,r} \hm\in C_k\setminus C_k^{\mathrm{O}}$ обслуживающее устройство переходит в состояние $\ga{k,r \oplus_k 1}$ того же цикла $C_k$. При $\ga{k,r}$ принадлежащем множеству $C_k^{\mathrm{O}}$ прибор переходит в состояние $\ga{k,r\oplus_k 1}$, если число требований в очереди $O_3$ в момент переключения больше заданного порога $L$. В противном случае, то есть если число требований в очереди $O_3$ меньше либо равно $L$, то новое состояние прибора будет состоянием продления $\ga{0,r_1}$, где $r_1=h_1(\ga{k,r})$ и $h_1(\cdot)$~--- заданное отображение множества $\bigcup\limits_{k=1}^d C_k^{\mathrm{O}}$ во множество $\{1,2,\ldots, n_0\}$. После состояния $\ga{0,r}$ выбирается состояние того же вида $\ga{0,r_2}$, если число требований в очереди $O_3$ меньше $L$, где $r_2=h_2(r)$ и $h_2(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на себя; в противном случае включается входное состояние $\ga{k,r_3} \in C_k^{\mathrm{I}}$, где $\ga{k,r_3}=h_3(r)$ и $h_3(\cdot)$~--- заданное отображение множества $\{1,2, \ldots, n_0\}$ на множество  $\bigcup\limits_{k=1}^d C_k^{\mathrm{I}}$. Считается, что все состояния продления $\ga{0,r}$ принадлежат множеству ${}^2 \G$, а также верны соотношения $C_k^\mathrm{O}\subset {}^2 \G$ и $C_k^\mathrm{I}\subset {}^3 \G$.
 
 \begin{figure}[hb]\centering
 \includegraphics[scale=0.5]{GraphScheme3.png} 
@@ -72,9 +77,9 @@ ${}^2\G=\G^{\mathrm{\Rmnum{1}}} \cup \G^{\mathrm{\Rmnum{2}}}$,
 ${}^3\G=\G^{\mathrm{\Rmnum{3}}} \cup \G^{\mathrm{\Rmnum{4}}}$. 
 Тогда поток насыщения $\Pi^{\mathrm{\text{нас}}}_j$, $j\in \brrr{1,2,3}$, будет содержать неслучайное число $\ell_{k,r,j}$ требований, обслуженных в течение времени $\Tt{k,r}$, если $\ga{k,r} \in~^j\G$, и будет содержать $0$ требований в противном случае: $\ga{k,r} \notin ~^j\G$. Пусть $Z_+$~--- множество целых неотрицательных чисел. Тогда, при условии, что в очереди $O_4$ находится $x \in Z_+$ требований, поток насыщения $\Pi^{\mathrm{\text{нас}}}_4$ определим как поток, содержащий все $x$ требований.
 %\subsection{Пример: тандем из двух перекрестков} 
-Наконец, при состоянии обслуживающего устройства $\ga{k,r}$ каждое требование из очереди $O_4$ с вероятностью $p_{k,r}$ и независимо от других завершает обслуживание и отправляется в очередь $O_2$ потока $\Pi_2$. С вероятностью $1-p_{k,r}$ требование очереди $O_4$ остается в ней до следующего такта.
+Наконец, при состоянии обслуживающего устройства $\ga{k,r}$ каждое требование из очереди $O_4$ с вероятностью $p_{k,r}$ и независимо от других завершает обслуживание и отправляется в очередь $O_2$ потока~$\Pi_2$. С вероятностью $1-p_{k,r}$ требование очереди $O_4$ остается в ней до следующего такта. На следующем такте процесс повторяется.
 
-В качестве наглядной физической интерпретации можно привести тандем из двух перекрестков (Рис. \ref{crossroads}).
+В качестве наглядной физической интерпретации можно привести тандем из двух перекрестков (рис. \ref{crossroads}).
 \begin{figure}[h]
 \includegraphics[scale=0.5]{Crossroads.png} 
 \caption{Пример: тандем перекрестков}
@@ -96,12 +101,13 @@ ${}^3\G=\G^{\mathrm{\Rmnum{3}}} \cup \G^{\mathrm{\Rmnum{4}}}$.
 \subsection{Представление рассматриваемой системы обслуживания в виде кибернетической управляющей системы}
 Описанная на содержательном уровне в предыдущем разделе система массового обслуживания должна рассматриваться как кибернетическая управляющая система обслуживания (ссылка на федоткина, Зорина А.В. киевский сборник твмс). Схема управляющей системы приведена на рис. \ref{SystemScheme}. На схеме присутствуют следующие блоки: 1) внешняя среда с одним состоянием; 2) входные полюса первого типа~--- входные потоки $\Pi_1$, $\Pi_2$, $\Pi_3$, $\Pi_4$; 3) входные полюса второго типа~--- потоки насыщения $\Pi_1^{\mathrm{\text{нас}}}$, $\Pi_2^{\mathrm{\text{нас}}}$, $\Pi_3^{\mathrm{\text{нас}}}$, $\Pi_4^{\mathrm{\text{нас}}}$; 4) внешняя память~--- очереди $O_1$, $O_2$, $O_3$, $O_4$; 5) устройство по переработки информации внешней памяти~--- устройства по поддержанию дисциплины очереди $\delta_1$, $\delta_2$, $\delta_3$, $\delta_4$; 6) внутренняя память обслуживающего устройства~--- обслуживающее устройство (ОУ); 7) устройство по переработке информации во внутренней памяти~--- граф смены состояний; 8) выходные полюса $\Pi_1^{\mathrm{\text{вых}}}$, $\Pi_2^{\mathrm{\text{вых}}}$, $\Pi_3^{\mathrm{\text{вых}}}$, $\Pi_4^{\mathrm{\text{вых}}}$. Координатой блока является номер этого блока на схеме. 
 
-Для задания информации блоков введем следующие величины и укажем множество возможных значений. В качестве дискретной временной шкалы выберем последовательность $\tau_0=0$, $\tau_1$, $\tau_2$, $\ldots$ моментов смены состояний обслуживающего устройства. Обозначим $\G_i$ из множества $\G$ состояние обслуживающего устройства в течение времени $\left(\tau_{i-1};\tau_i\right]$, количество $\vk_{j,i} \in Z_+ $ требований в очереди $O_j$ в момент времени $\tau_i$, количество $\eta_{j,i} \in Z_+$ требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\xi_{j,i} \in Z_+$ требований по потоку насыщения $\Pi^{\mathrm{\text{нас}}}_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\overline{\xi}_{j,i}\in Z_+$ реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, $j\in \brrr{1,2,3,4}$.
+Для задания информации блоков введем следующие величины и элементы, а также укажем множества их возможных значений. В качестве дискретной временной шкалы выберем последовательность $\tau_0=0$, $\tau_1$, $\tau_2$, $\ldots$ моментов смены состояний обслуживающего устройства. Обозначим $\G_i$ из множества $\G$ состояние обслуживающего устройства в течение времени $\left(\tau_{i-1};\tau_i\right]$, количество $\vk_{j,i} \in Z_+ $ требований в очереди $O_j$ в момент времени $\tau_i$, количество $\eta_{j,i} \in Z_+$ требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\xi_{j,i} \in Z_+$ требований по потоку насыщения $\Pi^{\mathrm{\text{нас}}}_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\overline{\xi}_{j,i}\in Z_+$ реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, $j\in \brrr{1,2,3,4}$.
 
 Закон изменения состояния обслуживающего устройства будем предполагать заданным соотношением 
-\begin{equation*}
+\begin{equation}
 \G_{i+1}=h(\G_i,\vk_{3,i}).
-\end{equation*}
+\label{gammaFunc}
+\end{equation}
 Для определения длительности $T_{i+1}$ состояния обслуживающего устройства в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, удобно ввести функцию $h_T(\cdot,\cdot)$:
 \begin{equation*}
 T_{i+1}=h_T(\G_i,\vk_{3,i})= \Tt{r'},\quad  \text{ где } \ga{r'}=\G_{i+1}=h(\G_i,\vk_{3,i}).
@@ -117,15 +123,59 @@ T_{i+1}=h_T(\G_i,\vk_{3,i})= \Tt{r'},\quad  \text{ где } \ga{r'}=\G_{i+1}=h(\
 \vk_{j,i+1}=\vk_{j,i}+\eta_{j,i}-\overline{\xi}_{j,i}, \quad  j\in \brrr{1,2,3},
 \end{equation*}
 то из \eqref{saturationEq} следует соотношение
-\begin{equation*}
+\begin{equation}
 \vk_{j,i+1}=\max\brrr{{0,\vk_{j,i}+\eta_{j,i}-\xi_{j,i}}}, \quad j\in \brrr{1,2,3}.
-\end{equation*}
+\label{queuesFunc}
+\end{equation}
 Из формулировки поставленной задачи (см. также структурную схему \eqref{SystemScheme}) следуют соотношения для потока $\Pi_4$
-\begin{equation*}
+\begin{equation}
 \overline{\xi}_{4,i} = \eta_{2,i} \quad \eta_{4,i} = \overline{\xi}_{1,i}, \quad \vk_{4,i+1}=\vk_{4,i}+\eta_{4,i}-\overline{\xi}_{4,i}.
+\label{FourthFunc}
+\end{equation}
+
+Нелокальное описание входных потоков и потоков насыщения состоит в указании некоторых свойств условных распределений выделенных дискретных компонент $\eta_i=(\eta_{1,i},\eta_{2,i}, \eta_{3,i})$ и $\xi_i=(\xi_{1,i}, \xi_{2,i}, \xi_{3,i}, \xi_{4,i})$ маркированных точечных процессов \linebreak $\brrr{(\tau_i, \nu_i, \eta_i); i\geqslant 0}$ и $\brrr{(\tau_i, \nu_i, \xi_i); i\geqslant 0}$ при фиксированных значениях метки $\nu_i = \br{\Gamma_i,(\vk_{1,i},\vk_{3,i},\vk_{4,i})}$. 
+Введем функции $\vp_1(\cdot,\cdot), \vp_3(\cdot,\cdot)$ из разложений 
+\begin{equation*}
+\sum_{x=0}^{\infty} z^x\vp_j(x,t) = \exp\brrr{\la_j t \br{f_j(z)-1}},
+\end{equation*}
+и $f_j(z)$ определены в \eqref{GeneratingFunc}, $j \in \brrr{1,3}$. $\vp_j(x,t)$ есть вероятность поступления $x=0$, $1$, $\ldots$ требований по потоку $\Pi_j$ за время $t \geqslant 0$. Определим ...
+
+
+При фиксированном значении метки $\nu_i=(\ga{k,r},x)$ вероятность одновременного выполнения равенств $\eta_{1,i}=a_1$, $\eta_{2,i}=a_2$, $\eta_{3,i}=a_3$ есть 
+\begin{equation}
+\vp_1(a_1,h_T(\ga{\widetilde{k},\widetilde{r}})) \times \psi(a_2,x_2, p_{\widetilde{k},\widetilde{r}}) \times \vp_1(a_1,h_T(\ga{\widetilde{k},\widetilde{r}})),
+% \times \delta_{a_4,\min{\{\widetilde{\ell}_{\widetilde{k},\widetilde{r},1}, x_1+a_1}\}},
+\label{conditionProb}
+\end{equation}
+где 
+\begin{equation*}
+\widetilde{\ell}_{k,r,1}=\begin{cases}\ell_{k,r,j},& \quad \text{если } \ga{k,r} \in {}^j\G\\0,& \quad \text{иначе}  \end{cases}.
+\end{equation*}
+и 
+\begin{equation*}
+\psi(a,x,p) =C_{x}^{a} p^a(1-p)^{x-a}.
 \end{equation*}
 
-Нелокальное описание входных потоков и потоков насыщения состоит в указании некоторых свойств условных распределений выделенных дискретных компонент $\eta_i=(\eta_{1,i},\eta_{2,i}, \eta_{3,i}, \eta_{4,i})$ и $\xi_i=(\xi_{1,i}, \xi_{2,i}, \xi_{3,i}, \xi_{4,i})$ маркированных точечных процессов $\brrr{(\tau_i, \nu_i, \eta_i); i\geqslant 0}$ и $\brrr{(\tau_i, \nu_i, \xi_i); i\geqslant 0}$ при фиксированных значениях метки $\nu_i = \br{\Gamma_i,\vk_i}$, где $\vk_i=(\vk_{1,i}, \vk_{2,i}, \vk_{3,i}, \vk_{4,i})$.
+%$\vp_j(a,h_T(\ga{k,r},x))$, $j=1$, $3$.  
+%\begin{equation*}
+%\begin{aligned}
+%f_{\xi_j | \G,\vk_3} (\gamma,x_3) &= \ell_{k,r,j},\text{ где }  h(\gamma,x)=\ga{k,r}\in {}^j\G \text{ и } j\in\brrr{1,2,3}\\
+%f_{\eta_4| \xi_1, \eta_1, \vk_1} (a,b,x) &= \begin{cases} a,\quad &\text{если }x+b\geq a \\  x+b,\quad &\text{если }x+b<a \end{cases},
+%\end{aligned}
+%\end{equation*}
+%и
+%\begin{equation*}
+%\begin{aligned}
+%P_{\eta_1|\G,\vk_3}(a,\gamma,x) &= \vp_1(a,h_T(\gamma,x))
+%\end{aligned}
+%\end{equation*}
+
+%\begin{equation}
+%P_{\eta_2|\G,\vk_3,\vk_4} (a,\gamma,x_3,x_4) &= \begin{cases} \binom{x_4}{a} p_{k,r}^a(1-p_{k,r})^{x_4-a}, \quad &\text{если } h(\gamma,x_3)=\ga{k,r} \\ 0, \quad &\text{иначе}\end{cases}, \\
+%\end{equation}
+где $0\leqslant a \leqslant x_4$, $b,x,x_3,x_4 \in Z_+$, $\gamma \in \G$.
+
+%, где $\vk_i=(\vk_{1,i}, \vk_{2,i}, \vk_{3,i}, \vk_{4,i})$.
 %
 %\item количество $\vk_{j,i} \in Z_+ $ требований в очереди $O_j$ в момент времени $\tau_i$;
 %\item состояние обслуживающего устройства $\G_i\in \G = \brrr{\G^{(1)},\G^{(2)}, \ldots, \G^{(n)}}$ в течение времени $\left(\tau_{i-1};\tau_i\right]$;
@@ -133,7 +183,27 @@ T_{i+1}=h_T(\G_i,\vk_{3,i})= \Tt{r'},\quad  \text{ где } \ga{r'}=\G_{i+1}=h(\
 %\item количество $\xi_{j,i}$ требований по потоку насыщения $\Pi^{\mathrm{sat}}_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$;
 %\item количество $\overline{\xi}_{j,i}$ реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$.
 
-Построим теперь 	вероятностное пространство $\br{\Omega, {\cal F}, P(\cdot)}$, чтобы можно было рассматривать введеные величины как случайные величины на этом пространстве. В соответствии с теоремой Ионеску Тулчи для этого достаточно задать вероятностное пространство $\br{\Omega_0, {\cal F}_0, P_0(\cdot)}$ и далее, считая для $0 \leqslant i < n$ и каждого набора элементарных исходов $(\omega_0, \omega_1, \ldots, \omega_{i-1})$ заданными пространства $\br{\Omega_i, {\cal F}_i, P_i(\omega_0,\omega_1,\ldots, \omega_{i-1},\cdot)}$, задать пространство $\br{\Omega_n, {\cal F}_n, P_n(\omega_0,\omega_1,\ldots, \omega_{n-1},\cdot)}$, причем для любого множества $B\in {\cal F}_i$ функции $P_i(\omega_0,\omega_1,\ldots, \omega_{i-1},B)$
+\begin{theorem}
+Пусть $\gamma_0 \in \G$ и $x_0=(x_{1,0},x_{2,0}, x_{3,0},x_{4,0})$ фиксированы.
+Тогда существует вероятностное пространство $\br{\Omega, {\cal F}, \Pr(\cdot)}$ и заданные на нем случайные величины $\eta_{j,i}=\eta_{j,i}(\omega)$, $\xi_{j,i}=\xi_{j,i}(\omega)$, $\overline{\xi}_{j,i}=\overline{\xi}_{j,i}(\omega)$,  $\vk_{j,i}=\vk_{j,i}(\omega)$, $\G_i=\G_i(\omega)$ такие, что $\G_0(\omega) = \gamma_0$ и $\vk_0(\omega)=x_0$, выполняются соотношения \eqref{gammaFunc}, \eqref{queuesFunc}, \eqref{FourthFunc} и для событий 
+\begin{gather}
+\begin{aligned}
+A_i\br{k;r;x_1;x_2;x_3;x_4} &= \{\omega \colon\G_i=\ga{k,r},\vk_{3,i}=x_3\}\cap\\ 
+& \quad \cap \{\omega \colon \vk_{1,i}=x_1,\vk_{2,i}=x_2,\vk_{4,i}=x_4\},
+\end{aligned}\\
+\begin{aligned}
+B_i\br{b_1;b_3;y_1;y_2;y_3;y_4} &= \{\omega \colon \eta_{1,i}=b_1,\eta_{3,i}=b_3\} \cap \\
+&\quad \cap \{\omega \colon \xi_{1,i}=y_1,\xi_{2,i}=y_2,\xi_{3,i}=y_3,\overline{\xi}_{4,i}=y_4\}
+\end{aligned}
+\end{gather}
+значение вероятности
+\begin{equation*}
+\Pr \Bigl(B_i\br{b_1;b_3;y_1;y_2;y_3;y_4}\Big|\bigcap_{t=0}^{i} A_t(k_t;r_t;x_{1,t};x_{2,t};x_{3,t};x_{4,t})\Bigr)
+\end{equation*}
+задается формулой \eqref{conditionProb}.
+\end{theorem}
+\begin{proof}
+Построим теперь 	вероятностное пространство $\br{\Omega, {\cal F}, \Pr(\cdot)}$, чтобы можно было рассматривать введеные величины как случайные величины на этом пространстве. В соответствии с теоремой Ионеску Тулчи (ссылка) для этого достаточно задать вероятностное пространство $\br{\Omega_0, {\cal F}_0, P_0(\cdot)}$ и далее, считая для $0 \leqslant i < n$ и каждого набора элементарных исходов $(\omega_0, \omega_1, \ldots, \omega_{i-1})$ заданными пространства $\br{\Omega_i, {\cal F}_i, P_i(\omega_0,\omega_1,\ldots, \omega_{i-1},\cdot)}$, задать пространство $\br{\Omega_n, {\cal F}_n, P_n(\omega_0,\omega_1,\ldots, \omega_{n-1},\cdot)}$, причем для любого множества $B\in {\cal F}_i$ функции $P_i(\omega_0,\omega_1,\ldots, \omega_{i-1},B)$
 должны быть измеримыми функциями от $(\omega_0, \omega_1, \ldots, \omega_{i-1})$. Тогда для $\Omega=\prod\limits_{i=0}^{\infty}\Omega_i$ и ${\cal F}=\prod\limits_{i=0}^{\infty} {\cal F}_i$ будет существовать единственная вероятностная мера $P(\cdot)$ такая, что $\forall i \geqslant 0$
 \begin{equation*}
 P\brrr{\omega \colon \omega_0 \in A_0, \omega_1 \in A_1, \ldots, \omega_i\in A_i} = P_i\br{A_0 \times A_1 \times \ldots \times A_i},
@@ -150,37 +220,19 @@ P\brrr{\omega \colon X_0(\omega) \in A_0, X_1(\omega)\in A_1, \ldots, X_i(\omega
 \end{equation}
 где $i\geqslant 0$, $A_i\in {\cal F}_i$.
 
-Итак, за описание элементарного исхода $\omega_i \in \Omega_i$ для произвольного $i \geqslant 0$ примем набор $\omega_i=(\omega_{1,i},\omega_{2,i},\omega_{3,i})$, $\omega_{j,i}\in Z_+$. Таким образом, $\Omega_i=Z_+^3$ и в качестве $\sigma$-алгебр ${\cal F}_i$ возьмем множество всех подмножеств $\Omega_i$: ${\cal F}_i=2^{\Omega_i}$. Для задания вероятностных мер и случайных величин, упомянутых выше, введем следующие функции:
+Итак, за описание элементарного исхода $\omega_i \in \Omega_i$ для произвольного $i \geqslant 0$ примем набор $\omega_i=(\omega_{1,i},\omega_{2,i},\omega_{3,i})$, $\omega_{j,i}\in Z_+$. Таким образом, $\Omega_i=Z_+^3$ и в качестве $\sigma$-алгебры ${\cal F}_i$ возьмем множество всех подмножеств $\Omega_i$: ${\cal F}_i=2^{\Omega_i}$. Для задания вероятностных мер и случайных величин, упомянутых выше, введем следующие функции:
 
 % и остается лишь задать вероятностные меры $P_0(\cdot)$ и $P_i(\omega_0,\omega_1,\ldots, \omega_{i-1},\cdot)$ для $i > 0$.
-\begin{equation*}
-\begin{aligned}
-f_{\xi_j | \G,\vk_3} (\gamma,x_3) &= \ell_{k,r,j},\text{ где }  h(\gamma,x)=\ga{k,r}\in {}^j\G \text{ и } j\in\brrr{1,2,3}\\
-f_{\eta_4| \xi_1, \eta_1, \vk_1} (a,b,x) &= \begin{cases} a,\quad &\text{если }x+b\geq a \\  x+b,\quad &\text{если }x+b<a \end{cases},
-\end{aligned}
-\end{equation*}
-и
+ и функции $\vp_1(\cdot,\cdot)$, $\vp_3(\cdot,\cdot)$ находятся из соотношений
 
-\begin{equation*}
-\begin{aligned}
-P_{\eta_2|\G,\vk_3,\vk_4} (a,\gamma,x_3,x_4) &= \begin{cases} \binom{x_4}{a} p_{k,r}^a(1-p_{k,r})^{x_4-a}, \quad &\text{если } h(\gamma,x_3)=\ga{k,r} \\ 0, \quad &\text{иначе}\end{cases}, \\
-P_{\eta_1|\G,\vk_3}(a,\gamma,x) &= \vp_1(a,h_T(\gamma,x)),\\
-P_{\eta_3|\G,\vk_3}(a,\gamma,x) &= \vp_3(a,h_T(\gamma,x)),
-\end{aligned}
-\end{equation*}
-где $0\leqslant a \leqslant x_4$, $b,x,x_3,x_4 \in Z_+$, $\gamma \in \G$ и функции $\vp_1(\cdot,\cdot)$, $\vp_3(\cdot,\cdot)$ находятся из соотношений
-\begin{equation*}
-\sum_{x=0}^{\infty} z^x\vp_j(x,t) = \exp\brrr{\la_j t \br{f_j(z)-1}},
-\end{equation*}
-и $f_j(z)$ определены в \eqref{GeneratingFunc}, $j \in \brrr{1,3}$.
-
-Далее, зафиксируем $\gamma_0\in \G$ и $(x_{1,0},x_{2,0},x_{3,0},x_{4,0})\in Z_+^4$, тогда  $P_0(\cdot)$ определим следующим образом:
-\ml
-{
-P_0(a_1,a_2,a_3) = P_0\brrr{\omega_0=(\omega_{1,0},\omega_{2,0},\omega_{3,0}) \colon \omega_{1,0}=a_1, \omega_{2,0}=a_2, \omega_{3,0}=a_3} = \\ 
-=P_{\eta_1|\G,\vk_3}(a_1,\gamma_0,x_{3,0})\times P_{\eta_2|\G,\vk_3,\vk_4} (a_2,\gamma_0,x_{3,0},x_{4,0}) \times P_{\eta_3|\G,\vk_3}(a_3, \gamma_0, x_{3,0}).
+Далее, зафиксируем $\ga{k,r}\in \G$ и $(x_{1,0},x_{2,0},x_{3,0},x_{4,0})\in Z_+^4$ и пусть $\ga{\widetilde{k},\widetilde{r}}=h(\ga{k,r},x_{3,0})$. Тогда  $P_0(\cdot)$ определим следующим образом.
+Поскольку множество $\Omega_i$ счетно, определим вероятностную меру $P_0(\cdot)$ на измеримом пространстве $(\Omega_0,{\cal F}_0)$ ее значениями на одноточечных множествах:
+\begin{equation}
+P_0(\{(a_1,a_2,a_3)\})=\vp_1(a_1,h_T(\ga{\widetilde{k},\widetilde{r}})) \times \psi(a_2,x_{2,0}, p_{\widetilde{k},\widetilde{r}}) \times \vp_1(a_1,h_T(\ga{\widetilde{k},\widetilde{r}})).
+% \times \delta_{a_4,\min{\{\widetilde{\ell}_{\widetilde{k},\widetilde{r},1}, x_{1,0}+a_1}\}},
 \label{probabilitiesOne}
-}
+\end{equation}
+
 На построенном вероятностном пространстве $\br{\Omega_0,{\cal F}_0,P_0(\cdot)}$ определим случайные величины
 \begin{equation}
 \begin{aligned}
@@ -196,9 +248,10 @@ P_0(a_1,a_2,a_3) = P_0\brrr{\omega_0=(\omega_{1,0},\omega_{2,0},\omega_{3,0}) \c
 где $j\in \brrr{1,2,3}$.
 Теперь, предполагая заданными вероятностные пространства \linebreak$\br{\Omega_i, {\cal F}_i,P_i(\omega_0, \omega_1, \ldots, \omega_{i-1},\cdot)}$, $i\in \brrr{0,1,\ldots,n}$, заданными случайные величины 
 
+Пусть $(\omega_0,\omega_1,\ldots, \omega_n)$ фиксированы, тогда
 \begin{equation}
 \begin{aligned}
-\G_{i+1}(\omega_0,\omega_1,\ldots,\omega_{i+1})&=h\br{\G_{i}(\omega_0,\omega_1,\ldots,\omega_{i}),\vk_{3,i}(\omega_0,\omega_1,\ldots,\omega_{i})}=\mathrm{const},\\
+\gamma_{i+1}(\omega_0,\omega_1,\ldots,\omega_{i+1})&=h\br{\G_{i}(\omega_0,\omega_1,\ldots,\omega_{i}),\vk_{3,i}(\omega_0,\omega_1,\ldots,\omega_{i})}=\mathrm{const},\\
 \vk_{j,i+1}(\omega_0,\omega_1,\ldots,\omega_{i+1})&=\max{\left\{ 0,\vk_{j,i}(\omega_0,\omega_1,\ldots,\omega_{i})+\eta_{j,i}(\omega_0,\omega_1,\ldots,\omega_{i}) - \right.}\\
 &-\left.\xi_{j,i}(\omega_0,\omega_1,\ldots,\omega_{i})\right\}=\mathrm{const},\\
 \vk_{4,i+1}(\omega_0,\omega_1,\ldots,\omega_{i+1})&=\vk_{4,i}(\omega_0,\omega_1,\ldots,\omega_{i})+\eta_{4,i}(\omega_0,\omega_1,\ldots,\omega_{i})-\\
@@ -226,11 +279,17 @@ P_{n+1}(\omega_0,\omega_1,\ldots,\omega_n,\brrr{\omega_{n+1} = (\eta_{1,n+1},\et
 \label{probabilitiesTwo}
 }
 Вероятностное пространство $\br{\Omega,{\cal F},P(\cdot)}$ с определенной на нем случайной последовательностью $X=\br{X_0(\omega),X_1(\omega),\ldots}$ построены.
+\end{proof}
 %\ml
 %{
 %
 %}
-\subsection{Свойства условных распределений}
+
+Таким образом, кибернетический подход позволил построить математическую модель управляющей системы обслуживания в виде последовательности случайных величин и случайных элементов, конструктивно заданных на некотором вероятностном пространстве. Выберем для исследования состояния обслуживающего устройства и длины всех очередей.
+
+\subsection[Марковское свойство последовательности $\boldsymbol{\Mark}$]%
+{Марковское свойство последовательности \\ $\boldsymbol{\Mark}$}
+
 Изучим теперь свойства распределения $P(\cdot)$ построенного вероятностного пространства $\br{\Omega,{\cal F},P(\cdot)}$ и, в частности, убедимся в том, что оно отражает основные характеристики рассматриваемой системы массового обслуживания.
 
 Начнем со связи последовательности $X(\omega)=\br{X_0(\omega), X_1(\omega),\ldots}$ со случайными величинами из \eqref{functionsOne}, \eqref{functionsTwo}, \eqref{functionsThree}. Поскольку (см. \eqref{ProbabilitiesGeneralOne} и \eqref{ProbabilitiesGeneralTwo}) 
@@ -243,7 +302,7 @@ P\br{X_0(\omega)=a_0} = P_0\br{\eta_0(\omega_0)=a_0}
 = P_n\br{a_0,a_1,\ldots, \brrr{\eta_n(\omega_n)=a_n}},
 }
 то условные распределения случайных величин $X_n(\omega)$ и распределения случайных величин $\eta_n(\omega_n)=\br{\eta_{1,n}(\omega_n),\eta_{2,n}(\omega_n),\eta_{3,n}(\omega_n)}$ совпадают, $n\geqslant 0$. Таким, образом, $X_n(\omega)$ можно рассматривать как <<продолжение>> величин $\eta_n(\omega_n)$ на общее вероятностное пространство $\br{\Omega,{\cal F},P(\cdot)}$ с исходных пространств $\br{\Omega_n,{\cal F}_n,P_n(\omega_0,\omega_1,\ldots,\omega_{n-1},\cdot)}$. Тогда определенные в прошлом разделе на качественном уровне величины теперь можно определить формально:
-\begin{equation}
+	\begin{equation}
 \begin{aligned}
 \eta_{j,n}(\omega) &= X_{j,n}(\omega),\quad \overline{\xi}_{4,0}(\omega)=\eta_{2,0}(\omega), & \quad \G_{i+1}(\omega)&=h\br{\G_{i}(\omega),\vk_{3,i}(\omega)},\\
 \vk_{j,i+1}(\omega)&=\max{\left\{ 0,\vk_{j,i}(\omega)+\eta_{j,i}(\omega) - \xi_{j,i}(\omega)\right\}},& \quad
