Make project be complient with Minsk article

--- a/MyPackages/commands.sty
+++ b/MyPackages/commands.sty
@@ -1,5 +1,5 @@
 \ProvidesPackage{commands}
-\usepackage[T2A]{fontenc}
+\usepackage[T2A,TS1]{fontenc}
 \usepackage[russian]{babel}   
 %\usepackage{commath} % for multline for example
 %Для использования различных шрифтов в формулах
